# fastapi-lab

./: .dockerignore  .env  .env.example  .gitignore  Makefile  README.md  alembic.ini  database.py  docker-compose.yml  main.py  manage.py  migrate.py  models.py  pyproject.toml  run_dev.py  schemas.py  test_restructure.py
app/apis/: v1.py
app/category/: README.md  __init__.py  crud.py  exceptions.py  models.py  routes.py  schemas.py  services.py
app/core/: README.md  crud.py  database.py  exceptions.py  logging.py  main.py  middleware.py  schemas.py  settings.py  test_exception_handlers.py  test_logging.py
app/product/: README.md  __init__.py  crud.py  exceptions.py  models.py  routes.py  schemas.py  services.py
docker/: Dockerfile  README.md  docker-entrypoint.sh
docs/: ALEMBIC_SETUP.md  ALEMBIC_TUTORIAL.md  API_ROUTER_PATTERN.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CURRENT_API_STRUCTURE.md  DATABASE_SETUP.md  DATABASE_SETUP_REVIEW.md  DOCKER_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SIMPLIFIED.md  EXCEPTION_HANDLERS.md  FASTMAN_CLI.md  FASTMAN_CLI_ARCHITECTURE.md  FASTMAN_CLI_GUIDE.md  FASTMAN_CLI_INDEX.md  FASTMAN_CLI_QUICK_REFERENCE.md  FASTMAN_CLI_README.md  FASTMAN_CLI_SUMMARY.md  FASTMAN_VS_DJANGO.md  FOLDER_STRUCTURE.md  HANDS_ON_GUIDE.md  LOGGING_CONFIG.md  LOGGING_VERIFICATION.md  MIGRATIONS.md  MODULE_QUICK_REFERENCE.md  MODULE_TEMPLATE.md  PROJECT_OVERVIEW.md  QUICK_START.md  RESTRUCTURE_README.md  ROUTER_CONFIG_CHEATSHEET.md  SECURITY_GUIDE.md  SETTINGS_GUIDE.md  SUMMARY.md
fastman_cli/: README.md  __init__.py  cli.py
migrations/: env.py
(+16 files in other folders)
